k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-api
spec:
  selector:
    matchLabels:
      app: time-api
  replicas: 2
  template:
    metadata:
      labels:
        app: time-api
    spec:
      containers:
      - name: time-api
        image: whoha4242/liatrio-exercise:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: time-api-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: time-api
